infrastructure/istio/config/21-oidc-authn-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingress-oidc-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: https://habitcentric.demo/auth/realms/habitcentric
      jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
      forwardOriginalToken: true
    - issuer: http://habitcentric.demo/auth/realms/habitcentric
      jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
      forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: hc-habit-oidc-jwt
  namespace: hc-habit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: habit
      app.kubernetes.io/instance: habit
  jwtRules:
  - issuer: https://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
  - issuer: http://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: hc-track-oidc-jwt
  namespace: hc-track
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: track
      app.kubernetes.io/instance: track
  jwtRules:
  - issuer: https://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
  - issuer: http://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: hc-report-oidc
  namespace: hc-report
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: report
      app.kubernetes.io/instance: report
  jwtRules:
  - issuer: https://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
  - issuer: http://habitcentric.demo/auth/realms/habitcentric
    jwksUri: http://keycloak-http.hc-keycloak.svc.cluster.local:8080/auth/realms/habitcentric/protocol/openid-connect/certs
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: keycloak-mtls-disabled
  namespace: hc-keycloak
spec:
  mtls:
    mode: PERMISSIVE
