infrastructure/istio/config/20-gateway-with-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: habitcentric-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "habitcentric.demo"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "ingress-credential"
      hosts:
        - "habitcentric.demo"
