infrastructure/istio/config/41-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: report-fault-injection
  namespace: hc-report
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: report
      app.kubernetes.io/version: v1
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND # will match outbound listeners in all sidecars
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.fault
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault"
            abort:
              http_status: 500
              percentage:
                numerator: 11
                denominator: HUNDRED
